--- a/styles/index.css
+++ b/styles/index.css
@@ -101,4 +101,18 @@ svg * {
   font-style: normal;
   font-display: swap;
 }
+:root {
+  --font-family-base: "Space Grotesk", sans-serif;
+  --color-light: #ffffff;
+  --color-palette-black-900: #292a32;
+  --color-palette-black-950: #191a23;
+  --color-palette-lime-100: #b9ff66;
+  --color-palette-gray-50: #f3f3f3;
+  --color-paletter-gray-400: #898989;
+  --border: 1px solid var(--color-palette-black-950);
+  --border-radius-7: 0.4375rem;
+  --border-radius-14: 0.875rem;
+  --border-radius-45: 2.8125rem;
+  --shadow: 0 5px 0 0 var(var(--color-palette-black-950));
+}
 /*# sourceMappingURL=index.css.map */
