--- a/styles/index.css
+++ b/styles/index.css
@@ -108,11 +108,26 @@ svg * {
   --color-palette-black-950: #191a23;
   --color-palette-lime-100: #b9ff66;
   --color-palette-gray-50: #f3f3f3;
-  --color-paletter-gray-400: #898989;
+  --color-palette-gray-400: #898989;
+  --spacing-20: 1.25rem;
+  --spacing-30: 1.875rem;
+  --spacing-35: 2.187rem;
+  --spacing-70: 4.375rem;
   --border: 1px solid var(--color-palette-black-950);
   --border-radius-7: 0.4375rem;
   --border-radius-14: 0.875rem;
   --border-radius-45: 2.8125rem;
-  --shadow: 0 5px 0 0 var(var(--color-palette-black-950));
+  --shadow: 0 5px 0 0 var(--color-palette-black-950);
+  --section-padding-y: var(--spacing-70);
+  --container-width: 90rem;
+  --container-padding-x: var(--spacing-20);
+  --spacing-button-horizontal: var(--spacing-20);
+  --spacing-button-vertical: var(--spacing-35);
+}
+
+@media (max-width: 768px) {
+  :root {
+    --section-padding-y: var(--spacing-30);
+  }
 }
 /*# sourceMappingURL=index.css.map */
