--- a/styles/index.css
+++ b/styles/index.css
@@ -103,9 +103,8 @@ svg * {
 }
 :root {
   --font-family-base: "Space Grotesk", sans-serif;
-  --color-light: #ffffff;
-  --color-palette-black-900: #292a32;
-  --color-palette-black-950: #191a23;
+  --color-white: #ffffff;
+  --color-black: #000000;
   --color-palette-lime-100: #b9ff66;
   --color-palette-gray-50: #f3f3f3;
   --color-palette-gray-400: #898989;
@@ -118,9 +117,11 @@ svg * {
   --border-radius-14: 0.875rem;
   --border-radius-45: 2.8125rem;
   --shadow: 0 5px 0 0 var(--color-palette-black-950);
+  --transition-duration: 0.2s;
   --section-padding-y: var(--spacing-70);
   --container-width: 90rem;
   --container-padding-x: var(--spacing-20);
+  --button-font-size: 1.25rem;
   --spacing-button-horizontal: var(--spacing-20);
   --spacing-button-vertical: var(--spacing-35);
 }
@@ -129,5 +130,55 @@ svg * {
   :root {
     --section-padding-y: var(--spacing-30);
   }
+}
+body {
+  font-family: var(--font-family-base);
+  font-size: clamp(1rem, 0.9285714286rem + 0.3571428571vw, 1.25rem);
+  font-weight: 400;
+  line-height: 1.28;
+  color: var(--color-black);
+  background-color: var(--color-white);
+}
+
+a,
+button,
+input,
+textarea,
+svg {
+  -webkit-transition-property: color, background-color, opacity, -webkit-transform;
+  transition-property: color, background-color, opacity, -webkit-transform;
+  transition-property: color, background-color, transform, opacity;
+  transition-property: color, background-color, transform, opacity, -webkit-transform;
+  -webkit-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
+}
+
+button {
+  font-size: var(--button-font-size);
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: clamp(2.6875rem, 2.3839285714rem + 1.5178571429vw, 3.75rem);
+}
+
+h2 {
+  font-size: clamp(2.25rem, 2.1785714286rem + 0.3571428571vw, 2.5rem);
+}
+
+h3 {
+  font-size: clamp(1.625rem, 1.5535714286rem + 0.3571428571vw, 1.875rem);
+}
+
+h4 {
+  font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
 }
 /*# sourceMappingURL=index.css.map */
