--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -17,6 +17,7 @@
   --spacing-20: 1.25rem;
   --spacing-30: 1.875rem;
   --spacing-35: 2.187rem;
+  --spacing-40: 2.5rem;
   --spacing-70: 4.375rem;
 
   --border: 1px solid var(--color-palette-black-950);
