--- a/styles/index.css
+++ b/styles/index.css
@@ -112,6 +112,7 @@ svg * {
   --spacing-20: 1.25rem;
   --spacing-30: 1.875rem;
   --spacing-35: 2.187rem;
+  --spacing-40: 2.5rem;
   --spacing-70: 4.375rem;
   --border: 1px solid var(--color-palette-black-950);
   --border-radius-7: 0.4375rem;
@@ -248,6 +249,10 @@ h4 {
   background-color: var(--color-palette-black-950);
   border: var(--border);
   border-radius: var(--border-radius-14);
+  white-space: nowrap;
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content;
 }
 @media (hover: hover) and (pointer: fine) {
   .button:hover {
@@ -274,5 +279,26 @@ h4 {
   .button_theme_transparent:active, .button_theme_transparent:focus-visible {
     background-color: var(--color-palette-lime-100);
   }
+}
+
+.header {
+  padding-block: 4.375rem;
+}
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: var(--spacing-40);
+     -moz-column-gap: var(--spacing-40);
+          column-gap: var(--spacing-40);
+}
+.header__nav {
+  margin-left: auto;
 }
 /*# sourceMappingURL=index.css.map */
