--- a/styles/base/_utils.scss
+++ b/styles/base/_utils.scss
@@ -1,3 +1,4 @@
+@use "./mixins";
 @use "./media";
 
 .container {
@@ -5,6 +6,10 @@
 
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
+}
+
+.visually-hidden {
+  @include mixins.visually-hidden;
 }
 
 .hidden-tablet {
