--- a/styles/index.css
+++ b/styles/index.css
@@ -136,6 +136,19 @@ svg * {
   padding-inline: var(--container-padding-x);
 }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
 @media (max-width: 768px) {
   .hidden-tablet {
     display: none !important;
