--- a/styles/blocks/menu/_menu.scss
+++ b/styles/blocks/menu/_menu.scss
@@ -1,3 +1,4 @@
+@use "../../base/functions";
 @use "../../base/mixins";
 
 .menu {
@@ -9,7 +10,8 @@
 
     display: inline-flex;
     align-items: center;
-    height: 48px;
+
+    height: #{functions.rem(48px)};
 
     @include mixins.hover-hoverable {
       &::after {
@@ -38,6 +40,6 @@
   }
 
   &_gap-40 {
-    column-gap: 40px;
+    column-gap: var(--spacing-40);
   }
 }
