--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -28,7 +28,7 @@
 
   --shadow: 0 5px 0 0 var(--color-palette-black-950);
 
-  --transition-duration: 0.2s;
+  --transition-duration-200ms: 0.2s;
 
   --section-padding-y: var(--spacing-70);
 
