feat(button): implement burger-button component styling

--- a/styles/blocks/header/_header.scss
+++ b/styles/blocks/header/_header.scss
@@ -1,7 +1,7 @@
 @use "../../base/functions";
 
 .header {
-  padding-block: functions.rem(70px);
+  padding-block: #{functions.rem(70px)};
 
   &__inner {
     display: flex;
