--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,3 +11,4 @@
 @use "./blocks/header/header";
 @use "./blocks/menu/menu";
 @use "./blocks/logo/logo";
+@use "./blocks/button/burger-button/burger-button";
