--- a/styles/index.css
+++ b/styles/index.css
@@ -377,4 +377,47 @@ h4 {
     max-width: 6.9375rem;
   }
 }
+
+.burger-button {
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-radius: 0;
+  background: none;
+  color: inherit;
+  font: inherit;
+  line-height: inherit;
+  text-align: inherit;
+  cursor: pointer;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: relative;
+  width: 3rem;
+  aspect-ratio: 1;
+  border-radius: var(--border-radius-14);
+}
+@media (hover: hover) and (pointer: fine) {
+  .burger-button:hover {
+    background-color: var(--color-palette-lime-100);
+  }
+}
+@media (hover: none), (hover: coarse), (pointer: coarse) {
+  .burger-button:active, .burger-button:focus-visible {
+    background-color: var(--color-palette-lime-100);
+  }
+}
+.burger-button::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  height: 0.125rem;
+  width: 50%;
+  background-color: var(--color-black);
+  border-radius: var(--border-radius-7);
+  -webkit-box-shadow: 0 -0.5rem, 0 0.5rem;
+          box-shadow: 0 -0.5rem, 0 0.5rem;
+}
 /*# sourceMappingURL=index.css.map */
