feat(header): create adaptive header for all device types

--- a/styles/base/_utils.scss
+++ b/styles/base/_utils.scss
@@ -12,6 +12,20 @@
   @include mixins.visually-hidden;
 }
 
+.hidden-mobile {
+  @include media.breakpoint-down("mobile") {
+    display: none !important;
+  }
+}
+
+.visible-mobile {
+  display: none !important;
+
+  @include media.breakpoint-down("mobile") {
+    display: block !important;
+  }
+}
+
 .hidden-tablet {
   @include media.breakpoint-down("tablet") {
     display: none !important;
