--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -14,6 +14,7 @@
   --color-palette-gray-50: #f3f3f3;
   --color-palette-gray-400: #898989;
 
+  --spacing-10: 0.625rem;
   --spacing-20: 1.25rem;
   --spacing-30: 1.875rem;
   --spacing-35: 2.187rem;
@@ -38,6 +39,8 @@
 
 @include media.breakpoint-down("tablet") {
   :root {
+    --container-padding-x: var(--spacing-10);
+
     --section-padding-y: var(--spacing-30);
   }
 }
