--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,3 +12,4 @@
 @use "./blocks/menu/menu";
 @use "./blocks/logo/logo";
 @use "./blocks/button/burger-button/burger-button";
+@use "./blocks/button/cross-button/cross-button";
