--- a/styles/blocks/menu/_menu.scss
+++ b/styles/blocks/menu/_menu.scss
@@ -40,6 +40,10 @@
     flex-wrap: wrap;
   }
 
+  &_orientation_vertical {
+    flex-direction: column;
+  }
+
   &_gap-30 {
     column-gap: var(--spacing-30);
   }
