--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,3 +13,4 @@
 @use "./blocks/logo/logo";
 @use "./blocks/button/burger-button/burger-button";
 @use "./blocks/button/cross-button/cross-button";
+@use "./blocks/menu-overlay/menu-overlay";
