--- a/styles/index.css
+++ b/styles/index.css
@@ -151,6 +151,12 @@ svg * {
   overflow: hidden !important;
 }
 
+@media (min-width: 601px) {
+  .hidden-mobile-up {
+    display: none !important;
+  }
+}
+
 @media (max-width: 600px) {
   .hidden-mobile {
     display: none !important;
@@ -392,6 +398,12 @@ h4 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+.menu_orientation_vertical {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
 .menu_gap-30 {
   -webkit-column-gap: var(--spacing-30);
      -moz-column-gap: var(--spacing-30);
@@ -496,5 +508,45 @@ h4 {
 }
 .cross-button::after {
   rotate: -45deg;
+}
+
+.menu-overlay {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+@media (max-width: 600px) {
+  .menu-overlay {
+    padding-top: 1.25rem;
+  }
+}
+.menu-overlay__close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.menu-overlay__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 80vh;
+}
+.menu-overlay:modal {
+  max-width: 100%;
+  max-height: 100%;
 }
 /*# sourceMappingURL=index.css.map */
