feat(section): implement section component styling

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,3 +14,4 @@
 @use "./blocks/button/burger-button/burger-button";
 @use "./blocks/button/cross-button/cross-button";
 @use "./blocks/menu-overlay/menu-overlay";
+@use "./blocks/section/section";
