--- a/styles/index.css
+++ b/styles/index.css
@@ -549,4 +549,8 @@ h4 {
   max-width: 100%;
   max-height: 100%;
 }
+
+.section {
+  padding-block: var(--spacing-70);
+}
 /*# sourceMappingURL=index.css.map */
